<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext"
        android:paddingStart="7dp"
        android:hint="@string/enter_new_task"
        android:paddingEnd="7dp"/>

    <!--<com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_the_description" /> -->

    <EditText
        android:id="@+id/description"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_the_description"
        android:paddingStart="7dp"
        android:paddingEnd="7dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/description"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />


</RelativeLayout>