<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/to_do_app"
        android:typeface="serif"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:textStyle="bold"
        android:drawablePadding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableRightCompat="@drawable/ic_baseline_done_all_24" />


    <TextView
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:layout_marginBottom="232dp"
        android:text="@string/keep_raising_yourself"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/by_kona_vamsi_krishna"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>